@@ -1,31 +1,39 @@
-# Compilador JAVA CC (Linguagem: IPSIS_LITERIS)
+# IpsisLiteris (Compilador JavaCC)
 
-Projeto de compilador usando javaCC desenvolvido para aula de compiladores - Univali - 2020/01.
-No presente momento apenas o analisador léxico está sendo implementado.
-
-## Intalação:
-
-- Primeiro deve ser feito o download do projeto.
-  
-- Após isso na sua IDE de programação java preferida de ser adicionado como biblioteca externa todos os aquivos do 
-  diretório: javafx-sdk-16/lib.
-  
-- Nas configurações de execução, onde trata-se das opções da maquina virtual java deve-se adicionar os seguintes 
-  parâmetros:
-  -  --module-path **diretorio do projeto no SO**/scannerJavaCC/javafx-sdk-16/lib
-  -  --add-modules javafx.controls,javafx.fxml
-  -  --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+Projeto de compilador desenvolvido com javaCC seguindo orientações da aula de compiladores - Univali - 2021/01.
 
 ### Dependencias:
 - Java 14.1
 - JavaFX 16
-    
-## Execução:
-- Deve ser feita via IDE ou via linha de comando informando os parametros da JVM
-- Executavel JAR do projeto se encontra no diretório: /jar
-    - Para rodar o executavel deve ser feito via linha de comando usando: 
-        - java -jar scanner.jar --module-path **diretorio do projeto no SO**/scannerJavaCC/javafx-sdk-16/lib --add-modules javafx.controls,javafx.fxml --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
-    
+
+## Instalando o compilador IpsisLiteris:
+
+- Para baixar o projeto basta cloná-lo na pasta que desejar.
+
+  ``` bash
+  git clone https://github.com/andrigoBS/IpsisLiteris.git
+  ```
+
+- Então, na sua IDE, apontar a classe [Launcher] como classe principal (main).
+- Caso queira gerar o jar, basta dar o comando ```mvn clean package``` e o jar será gerado na pasta [jar] (nós já disponibilizamos o jar na mesma pasta)
+
+## Executando
+
+Ao executar o [jar], ou a função main da classe [Launcher], será aberta uma janela com a IDE para escrita do código fonte na linguagem [Ipsis Literis].
+
+O código compilado, irá gerar um código intermediário na linguagem [Id est], que será executado pela nossa máquina virtual de mesmo nome.
+
+## Autores
+O presente código foi implementado por:
+* [Andrigo B. Santos](https://github.com/andrigoBS)
+* [Hilson A. W. Junior](https://github.com/Hilson-Alex)
+
+
+## Licença
+
+Esse projeto está sob a licença [MIT](/LICENSE)
+
+
 ## Links:
 - como instalar javafx no intellij IDEA 2020.3:
   https://www.jetbrains.com/help/idea/javafx.html?keymap=primary_windows#vm-options
@@ -33,9 +41,7 @@ No presente momento apenas o analisador léxico está sendo implementado.
 
 - JavaFX: https://gluonhq.com/products/javafx/
 
-
-## Autores
-O presente código foi implementado por:
-* [Andrigo B. Santos](https://github.com/andrigoBS)
-* [Hilson A. W. Junior](https://github.com/Hilson-Alex)
-
+[Launcher]: /src/main/java/scanner/controller/Launcher.java
+[Ipsis Literis]: /syntax/IpsisLiteris.md
+[Id est]: /syntax/IdEst.md
+[jar]: /src/jar
